--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "test",
+  "name": "lvjx-app",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "rimraf": "rimraf ./test"
   },
   "keywords": [],
   "author": "lvjiaxuan",
