--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/lvjiaxuan/create-base-app"
   },
   "author": "lvjiaxuan",
   "license": "ISC",
