--- a/package.json
+++ b/package.json
@@ -15,7 +15,12 @@
     "type": "git",
     "url": "https://github.com/lvjiaxuan/create-base-app"
   },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/",
+    "access": "public"
+  },
   "author": "lvjiaxuan",
+  "email": "471501748@qq.com",
   "license": "ISC",
   "description": "",
   "dependencies": {
