perf: 给代码分了下文件,没啥新功能,性能也没优化

--- a/package.json
+++ b/package.json
@@ -21,6 +21,11 @@
     "registry": "https://registry.npmjs.org/",
     "access": "public"
   },
+  "config": {
+    "commitizen": {
+      "path": "./template/_cz-simple"
+    }
+  },
   "author": "lvjiaxuan",
   "email": "471501748@qq.com",
   "license": "ISC",
