--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.1.0",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint ./src"
+    "lint": "eslint ./src",
+    "test": "npm run lint"
   },
   "bin": {
     "i": "index.js"
