--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint ./src",
-    "test": "npm run lint"
+    "test": "npm run lint",
+    "publish": "npm publish"
   },
   "bin": {
-    "i": "index.js"
+    "cra": "index.js"
   },
   "keywords": [],
   "file": [
