--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lvjx/create-app",
-  "version": "1.1.0",
+  "version": "0.0.1",
   "main": "index.js",
   "scripts": {
     "lint": "eslint ./src",
@@ -8,10 +8,12 @@
     "publish": "npm publish"
   },
   "bin": {
-    "cra": "index.js"
+    "lva": "index.js",
+    "lv": "main.js"
   },
   "keywords": [],
   "file": [
+    "main.js",
     "index.js"
   ],
   "repository": {
@@ -32,14 +34,17 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^0.22.0",
+    "commander": "^8.2.0",
     "cosmiconfig": "^7.0.1",
     "cross-spawn": "^7.0.3",
     "enquirer": "^2.3.6",
-    "npm-check-updates": "^11.8.3",
-    "ora": "^6.0.0",
-    "prettier": "^2.3.2"
+    "eslint": "^7.32.0",
+    "npm-check-updates": "^11.8.5",
+    "ora": "^5.4.1",
+    "prettier": "^2.4.1",
+    "prompts": "^2.4.2",
+    "husky": "^7.0.2"
   },
-  "devDependencies": {
-    "eslint": "^7.32.0"
-  }
+  "devDependencies": {}
 }
