--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "config": {
     "commitizen": {
-      "path": "./template/_cz-simple"
+      "path": "./tools/commitizen/.cz-simple"
     }
   },
   "author": "lvjiaxuan",
