--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@lvjiaxuan/create-app",
-  "version": "1.0.0",
+  "name": "@lvjiaxuan/create-base-app",
+  "version": "1.0.1",
   "main": "index.js",
   "scripts": {
     "lint": "eslint ./src",
@@ -24,25 +24,24 @@
   },
   "config": {
     "commitizen": {
-      "path": "./src/tools/commitizen/.cz-simple"
+      "path": "./src/tools/cz/.cz-simple"
     }
   },
   "author": "lvjiaxuan",
   "email": "471501748@qq.com",
   "license": "ISC",
-  "description": "",
+  "description": "create a base application demo",
   "dependencies": {
-    "@lvjiaxuan/create-app": "^1.0.0",
-    "axios": "^0.23.0",
-    "commander": "^8.2.0",
+    "axios": "^0.26.1",
+    "commander": "^9.1.0",
     "cosmiconfig": "^7.0.1",
     "cross-spawn": "^7.0.3",
     "enquirer": "^2.3.6",
-    "eslint": "^8.0.1",
-    "husky": "^7.0.2",
-    "npm-check-updates": "^11.8.5",
+    "eslint": "^8.11.0",
+    "husky": "^7.0.4",
+    "npm-check-updates": "^12.5.4",
     "ora": "^5.4.1",
-    "prettier": "^2.4.1",
+    "prettier": "^2.6.0",
     "prompts": "^2.4.2"
   }
 }
