--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@lvjiaxuan/create-base-app",
+  "name": "@lvjiaxuan/create-app",
   "version": "1.0.1",
   "main": "index.js",
   "scripts": {
