--- a/packages/create-app/package.json
+++ b/packages/create-app/package.json
@@ -4,8 +4,8 @@
   "description": "Create a base application demo",
   "author": "lvjiaxuan <471501748@qq.com> (https://github.com/lvjiaxuan)",
   "main": "dist/index.js",
-  "module": "index.ts",
-  "types": "index.d.ts",
+  "module": "dist/index.mjs",
+  "types": "",
   "scripts": {},
   "files": ["dist"],
   "repository": {
@@ -15,15 +15,15 @@
   },
   "exports": {
     ".": {
-      "require": "index.js",
-      "import": "index.mjs"
+      "require": "./dist/index.js",
+      "import": "./dist/index.mjs"
     },
-    "./esm.mjs": "index.mjs"
+    "./create": {
+      "require": "./dist/create.js",
+      "import": "./dist/create.mjs"
+    }
   },
-  "bugs": {
-    "url": "https://github.com/lvjiaxuan"
-  },
-  "homepage": "https://github.com/lvjiaxuan",
+  "homepage": "https://github.com/lvjiaxuan/create-app#readme",
   "publishConfig": {
     "registry": "https://npm.pkg.github.com",
     "access": "public"
